--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,3 +1,4 @@
 <h1>This is home page </h1>
 
-<%= link_to 'About', about_path   %>
+<%= link_to 'About', about_path   %> |
+<%= link_to 'Articles', articles_path   %>
