--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,4 +1,5 @@
-<h1>This is home page </h1>
+<div class="center jumbotron">
+  <h1>ALPHA BLOG</h1>
 
-<%= link_to 'About', about_path   %> |
-<%= link_to 'Articles', articles_path   %>
+<%= link_to "Sign up now",  "#", class: "btn btn-primary btn-lg"  %>
+</div>
