--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -6,22 +6,37 @@
 </ul>
 <% end %>
 
-<%= form_for @article do |f| %>
+<div class='row'>
+  <div class='col-xs-12'>
+    <%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+      <div class="form-group">
+        <div class="control-label col-sm-2">
 
-<p>
-  <%= f.label :title %><br/>
-  <%= f.text_field :title %>
-<p>
+           <%= f.label :title %>
+        </div>
+        <div class="col-sm-8">
+           <%= f.text_field :title, class:"form-control", placeholder: "Title of article", autofocus: true %>
+        </div>
+       </div>
 
-  <p>
-    <%= f.label :description %><br/>
-    <%= f.text_area :description %>
-  <p>
+       <div class="form-group">
+         <div class="control-label col-sm-2">
+             <%= f.label :description %>
+         </div>
+         <div class="col-sm-8">
+        <%= f.text_area :description, rows:10, class:"form-control", placeholder: "Body of article", autofocus: true %>
+      </div>
+    </div>
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <%= f.submit class:'btn btn-primary btn-lg' %>
+      </div>
+    </div>
 
-    <p>
-      <%= f.submit %>
-    <p>
+    <% end %>
 
-<% end %>
-
-<%= link_to "Bck to articles listing", articles_path %>
+<div class="col-xs-4 col-xs-offset-4">
+    [<%= link_to "Cancel request and return to articles listing", articles_path %>]
+</div>
+</div>
+</div>
